2019-04-21  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Group assets and liabilities with the same type in accounts view

2019-04-06  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use localeconv() for number format
	  (improves sign and currency symbol placement, and fixes locales
	  where number format differs between general and monetary numbers)

2019-04-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use dot as alternative decimal separator for locales
	  with decimal comma and without dot as group separator

2019-03-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Language selection from within the application

2019-02-18  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not use deprecated QtCharts axis functions

2019-02-02  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Schedule confirmation time setting

2019-01-30  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix filter min and max currency
	* Fix crash on CSV import of quoted value containing delimiter

2019-01-15  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Update revision of schedule on confirmed occurrence

2019-01-14  svedie <svedie@gmail.com>

	* Improved German translation

2019-01-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Description of eqz file format

2019-01-16  Michael F. Schönitzer <michael@schoenitzer.de>

	* Some German translation improvements

2018-11-14  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make eqz-file parsing more flexible (do not require transaction type,
	  accept value property for expenses and incomes, allow to/from instead of
	  category propery, etc.)
	* Timestamp in seconds instead of microseconds

2018-11-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Better handling of unknown transaction or category type encountered in file

2018-11-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Budget day fixes

2018-10-31  Hanna Knutsson <hanna.knutsson@protonmail.com>
