@@ -1,3 +1,9 @@
+2019-04-23  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix updating of account values when a transaction has been edited
+	  in dialog and posponed to future date
+	* Fix segfault when transaction is split up
+
 2019-04-21  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Group assets and liabilities with the same type in accounts view
